jira-software/manifests/03-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jira-software
  name: jira-software
  namespace: atlassian-jira
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jira-software
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jira-software
    spec:
      containers:
      - env:
        - name: X_PROXY_NAME
          value: jira.k8s-srini.s3labs.com
        - name: X_PROXY_PORT
          value: "443"
        - name: X_PROXY_SCHEME
          value: https
        - name: JAVA_OPTS
          value: -Xmx1536m -Xms1536m -XX:MaxMetaspaceSize=512m -XX:MaxDirectMemorySize=10m
            -Djira.websudo.is.disabled=true
        image: cptactionhank/jira-software:7.10.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 3
        name: jira-software
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 800m
            memory: 2560Mi
          requests:
            cpu: "0"
            memory: 2560Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/atlassian/jira
          name: data
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: jira-software
