jira-software/manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jira-software
  name: jira-software-service
  namespace: atlassian-jira
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: jira-software
